# PhysicalEngine2D

./: CMakeLists.txt  README.md
PE2D/: CMakeLists.txt  msg.md
PE2D/include/: PhysicalEngine2D.hpp
PE2D/include/collision_system/: collision_types.hpp
PE2D/include/collision_system/detection/: aabb_detection.hpp  vertix_detection.hpp
PE2D/include/collision_system/resolution/: impulse_resolution.hpp  penetration_resolution.hpp
PE2D/include/constraints/: constraint_types.hpp
PE2D/include/entities/: rigidbody.hpp
PE2D/include/math/: geometry2d.hpp  math_utils.hpp  matrix3x3.hpp  vector2d.hpp
PE2D/include/motion_system/: motion_types.hpp
PE2D/include/motion_system/integrators/: integrator.hpp
PE2D/include/motion_system/rotation/: rotation.hpp
PE2D/include/types/: common_types.hpp
PE2D/include/utils/: timer.hpp
PE2D/modules/engine/: engine.ixx  engine_module.cppm
PE2D/src/: PhysicsEngine2D.cpp
PE2D/src/collision_system/detection/: aabb_detection.cpp  vertix_detection.cpp
PE2D/src/collision_system/resolution/: impulse_resolution.cpp  penetration_resolution.cpp
PE2D/src/constraints/: constraint_types.cpp
PE2D/src/entities/: rigidbody.cpp
PE2D/src/math/: geometry2d.cpp  math_utils.cpp  matrix3x3.cpp  vector2d.cpp
PE2D/src/types/: common_types.cpp
example/: CMakeLists.txt
example/include/camera/: camera.hpp
example/include/shader/: shader.hpp
example/res/shaders/: aabb.frag  aabb.vert  obj.frag  obj.vert
example/src/: b.cpp  main.cpp
src/: CMakeLists.txt
